--- a/src/index.html
+++ b/src/index.html
@@ -81,6 +81,34 @@
       }
     }
   </style>
+  <script>
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('/service-worker.js', {
+        scope: '/'
+      })
+      .then(registration => {
+        let newWorker = null;
+        let refreshing = false;
+
+        registration.addEventListener('updatefound', () => {
+          newWorker = registration.installing;
+          console.log('Update found');
+          newWorker.addEventListener('statechange', () => {
+            if (newWorker.state === 'installed' && navigator.serviceWorker.controller) {
+              const response = confirm('A new version of your application is available, would you like to update ?');
+              if (response) newWorker.postMessage({ type: 'SKIP_WAITING' });
+            }
+          });
+
+          navigator.serviceWorker.addEventListener('controllerchange', () => {
+            if (refreshing) return;
+            window.location.reload();
+            refreshing = true;
+          });
+        });
+      });
+    }
+  </script>
 </head>
 <body>
   <section id="app">
