--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Awesome News 📬</title>
+  <link rel="manifest" href="/manifest.json">
   <style>
     *,*::before, *::after {
       margin: 0;
