--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,9 @@
   <title>Awesome News 📬</title>
   <link rel="manifest" href="/manifest.json">
   <style>
+    :root {
+      --app-main-color: royalblue;
+    }
     *,*::before, *::after {
       margin: 0;
       padding: 0;
@@ -27,7 +30,7 @@
       text-align: center;
       position: sticky;
       top: 0;
-      background-color: royalblue;
+      background-color: var(--app-main-color);
       display: flex;
       justify-content: center;
       align-items: center;
